--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
   <link rel="stylesheet" href="./main.css">
 
   <title>Frontend Mentor | 3-column preview card component</title>
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
 
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
@@ -28,18 +19,20 @@
   <section>
     <div class="main-container">
 
-      <div class="container-1">
-        <div class="vehicle-icon-container">
-          <img src="./images/icon-sedans.svg" alt="sedans">
-        </div>
-        <div class="heading">
-          <h1>Sedans</h1>
-        </div>
-        <div class="paragraph">
-          <p>
-            Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-            or on your next road trip.
-          </p>
+      <div class="container sedans-container">
+        <div class="detail-section">
+          <div class="vehicle-icon-container">
+            <img src="./images/icon-sedans.svg" alt="sedans">
+          </div>
+          <div class="heading">
+            <h1>Sedans</h1>
+          </div>
+          <div class="paragraph">
+            <p>
+              Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+              or on your next road trip.
+            </p>
+          </div>
         </div>
         <div class="btn">
           <button class="btn-sedans">
@@ -48,18 +41,20 @@
         </div>
       </div>
 
-      <div class="container-2">
-        <div class="vehicle-icon-container">
-          <img src="./images/icon-suvs.svg" alt="suvs">
-        </div>
-        <div class="heading">
-          <h1>SUVs</h1>
-        </div>
-        <div class="paragraph">
-          <p>
-            Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
-            and off-road adventures.
-          </p>
+      <div class="container suvs-container">
+        <div class="detail-section">
+          <div class="vehicle-icon-container">
+            <img src="./images/icon-suvs.svg" alt="suvs">
+          </div>
+          <div class="heading">
+            <h1>SUVs</h1>
+          </div>
+          <div class="paragraph">
+            <p>
+              Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
+              and off-road adventures.
+            </p>
+          </div>
         </div>
         <div class="btn">
           <button class="btn-suvs">
@@ -68,18 +63,20 @@
         </div>
       </div>
 
-      <div class="container-3">
-        <div class="vehicle-icon-container">
-          <img src="./images/icon-luxury.svg" alt="luxury">
-        </div>
-        <div class="heading">
-          <h1>Luxury</h1>
-        </div>
-        <div class="paragraph">
-          <p>
-            Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-            rental and arrive in style.
-          </p>
+      <div class="container luxury-container">
+        <div class="detail-section">
+          <div class="vehicle-icon-container">
+            <img src="./images/icon-luxury.svg" alt="luxury">
+          </div>
+          <div class="heading">
+            <h1>Luxury</h1>
+          </div>
+          <div class="paragraph">
+            <p>
+              Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+              rental and arrive in style.
+            </p>
+          </div>
         </div>
         <div class="btn">
           <button class="btn-luxury">
